Dark Mode 2.1 fixed formatting again

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -59,10 +59,6 @@
 }
 
 /* Dark Mode Buttons */
-.dark-button {
-  background-color: #4f46e5;
-  color: white;
-}
 
 /* .dark-button:hover {
   background-color: #2563eb; } */
@@ -87,3 +83,17 @@
   color: #111827;
 }
 
+.dark-button.wordsearch {
+  background-color: #4f46e5;
+  color: white;
+}
+
+.dark-button.dictionary {
+  background-color: #4f46e5;
+  color: white;
+}
+
+.dark-button.anagram {
+  background-color: #4f46e5;
+  color: white;
+}
